<resources>
    <string name="app_name">thinklet.squid.run</string>
    <string name="launch_parameters">Launch Parameters</string>
    <string name="label_server_ip">Server IP</string>
    <string name="label_stream_url">Stream URL</string>
    <string name="label_device_id">Device ID (Stream Key)</string>
    <string name="device_id_source_text">Source: %1$s</string>
    <string name="label_stream_key">Stream Key</string>
    <string name="label_dimension">Dimension</string>
    <string name="label_record_dimension">Record Dimension</string>
    <string name="label_video_bitrate">Video Bitrate(kbps)</string>
    <string name="label_sampling_rate">Audio Sampling Rate (kHz): </string>
    <string name="label_audio_bitrate">Audio Bitrate (kbps): </string>
    <string name="label_audio_channel">Audio Channel: </string>
    <string name="label_echo_canceler">Echo Canceler: </string>
    <string name="label_mic_mode">Mic Mode: </string>
    <string name="label_permission_granted">Permission Granted: </string>
    <string name="label_app_status">App Status:</string>
    <string name="label_stream_prepared">Stream Prepared: </string>
    <string name="label_streaming">Streaming: </string>
    <string name="label_audio_muted">Audio Muted: </string>
    <string name="label_recording">Recording: </string>
    <string name="label_preview">Preview: </string>
    <string name="button_start_recording">Start Recording</string>
    <string name="button_stop_recording">Stop Recording</string>
    <string name="button_toggle_preview">Toggle Preview</string>
    <string name="button_save_config">Save</string>
    <string name="dimension_text">(w)%1$d x (h)%2$d</string>
    <string name="streaming_events">Streaming Events</string>
</resources>
