<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/title_launch_parameter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/launch_parameters"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_marginBottom="16dp"/>

                    <TextView
                        android:id="@+id/label_stream_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_stream_url"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

                    <TextView
                        android:id="@+id/stream_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="8dp"
                        tools:text="rtmp://example.com" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/stream_key_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_stream_key">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/stream_key"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="xxxx-xxxx-xxxx-xxxx"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/button_save_stream_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:text="Save" />

                    <TextView
                        android:id="@+id/label_dimension"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_dimension"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_marginTop="16dp"/>

                    <TextView
                        android:id="@+id/dimension"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="(w)1920 x (h)1080" />

                    <TextView
                        android:id="@+id/label_video_bitrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_video_bitrate"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/video_bitrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="8000" />

                    <TextView
                        android:id="@+id/label_sampling_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_sampling_rate"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/sampling_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="96" />

                    <TextView
                        android:id="@+id/label_audio_bitrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_audio_bitrate"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/audio_bitrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="96" />

                    <TextView
                        android:id="@+id/label_audio_channel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_audio_channel"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/audio_channel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="stereo" />

                    <TextView
                        android:id="@+id/label_echo_canceler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_echo_canceler"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/echo_canceler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="true" />

                    <TextView
                        android:id="@+id/label_mic_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_mic_mode"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/mic_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="android" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/title_app_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_app_status"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_marginBottom="16dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:id="@+id/label_connection_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Connection: "
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
                        <TextView
                            android:id="@+id/connection_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            tools:text="CONNECTED" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:id="@+id/label_permission_granted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_permission_granted"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
                        <TextView
                            android:id="@+id/permission_granted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            tools:text="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:id="@+id/label_stream_prepared"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_stream_prepared"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
                        <TextView
                            android:id="@+id/stream_prepared"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            tools:text="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:id="@+id/label_streaming"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_streaming"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
                        <TextView
                            android:id="@+id/streaming"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            tools:text="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:id="@+id/label_audio_muted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_audio_muted"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
                        <TextView
                            android:id="@+id/audio_muted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            tools:text="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="16dp">
                        <TextView
                            android:id="@+id/label_recording"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_recording"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
                        <TextView
                            android:id="@+id/recording"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            tools:text="false" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/button_record"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_start_recording" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/title_streaming_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/streaming_events"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/streaming_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#f0f0f0"
                android:padding="8dp"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="event1\nevent2" />
        </LinearLayout>
    </ScrollView>

    <ViewStub
        android:id="@+id/preview_stub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout="@layout/preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
